2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/menu.cpp: 
	* src/blackjack.cpp: i18n fixes from Christian Neumair (bug #114875).

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* src/dialog.cpp: 
	* src/game.cpp: Removed separator from dialogs as in HIG.

2003-06-07  William Jon McCann  <mccann@jhu.edu>

	* src/game.cpp (bj_game_eval_installed_file): Use HIG
	markup in error dialog.

	* src/dialog.cpp (show_preferences_dialog): HIG spacing
	tweak.

	* src/player.cpp (showOptions): Fixed i18n string issue.

	* src/blackjack.cpp: Keep local state information,
	removed quit confirmation dialog, use toolbar setting
	at startup.

	* src/dialog.cpp (pref_dialog_response): Make card
	preferences instant apply.

2003-06-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/menu.cpp: 
	* src/dialog.cpp:
	Fixes to make dialogs be presented properly. Fixes bug #114623.

	* src/dialog.cpp: Updated to use the revised
	gtk_card_deck_blah_blah API.
	

2003-06-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* data/.cvsignore: Oops, should be blackjack.desktop, not
	blackjack.desktop.in .

2003-06-04  William Jon McCann  <mccann@jhu.edu>

	* src/dialog.cpp: Added all rule fields to tree view in pref
	dialog so that rules should be mostly self documented.  Also
	removed unused functions and HIGified alerts.

	* src/game.h: 
	* src/game.cpp: Added new functions to load rules from file.
	Added new BJGameRules class derived from BJRules that holds
	all rule attributes.

	* src/strategy.h: 
	* src/strategy.cpp: Added get methods for private variables.

	* data/Vegas_Strip.rules: Change to allow double after split,
	surrender, and resplitting aces.  This should not affect the
	cached rules file.

2003-06-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/Makefile.am: 
	Authors is in the next directory down, not here.

	* src/dialog.cpp:
	* src/game.cpp:
	* src/hand.cpp:
	* src/menu.cpp:
	* src/player.cpp:
	* src/blackjack.cpp: 