@@ -1,4 +1,4 @@
 Makefile.in
 Makefile
 blackjack.desktop
-
+blackjack.schemas
