@@ -1,0 +1,76 @@
+<gconfschemafile>
+  <schemalist>
+
+    <schema>
+      <key>/schemas/apps/blackjack/show_toolbar</key>
+      <applyto>/apps/blackjack/show_toolbar</applyto>
+      <owner>blackjack</owner>
+      <type>bool</type>
+      <default>TRUE</default>
+      <locale name="C">
+        <short>Whether or not to show the toolbar.</short>
+        <long>Whether or not to show the toolbar.</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/blackjack/settings/variation</key>
+      <applyto>/apps/blackjack/variation</applyto>
+      <owner>blackjack</owner>
+      <type>string</type>
+      <default>Vegas_Strip.rules</default>
+      <locale name="C">
+        <short>The variation of the rules file to use.</short>
+        <long>The name of the rules file containing the variation of the rules to play.</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/blackjack/deck/options</key>
+      <applyto>/apps/blackjack/deck/options</applyto>
+      <owner>blackjack</owner>
+      <type>string</type>
+      <default>dondorf-flower.png dondorf.png gnome.png bold-09x14.png knuth-09x10.png knuth-18x21.png knuth-21x25.png</default>
+      <locale name="C">
+        <short>What card style to use.</short>
+        <long>A string containing a list of files to use to describe the cards. The format is obscure and defined by the gdk-card-image library</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/blackjack/global/balance</key>
+      <applyto>/apps/blackjack/global/balance</applyto>
+      <owner>blackjack</owner>
+      <type>float</type>
+      <default>500.0</default>
+      <locale name="C">
+        <short>The amount of money in your bank.</short>
+        <long>The amount of money in your bank.</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/blackjack/settings/show_probabilities</key>
+      <applyto>/apps/blackjack/settings/show_probabilities</applyto>
+      <owner>blackjack</owner>
+      <type>bool</type>
+      <default>FALSE</default>
+      <locale name="C">
+        <short>Display probabilities.</short>
+        <long>Display the probabilities of each dealer hand outcome and the expected value of your hand.</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/blackjack/settings/quick_deal</key>
+      <applyto>/apps/blackjack/settings/quick_deal</applyto>
+      <owner>blackjack</owner>
+      <type>bool</type>
+      <default>FALSE</default>
+      <locale name="C">
+        <short>Use a quick deal.</short>
+        <long>Use a quick deal with no delay between each card.</long>
+      </locale>
+    </schema>
+  </schemalist>
+</gconfschemafile>
